# swig

./: CMakeLists.txt
Examples/kotlinnative/class/: example_test.kt
Examples/kotlinnative/simple/: example_test.kt
